// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractViolationFromZodError should return the all issues for input: { foo: 'bar' } 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Invalid input: expected object, received undefined",
    "params": undefined,
    "path": [
      "nested",
    ],
  },
]
`;

exports[`extractViolationFromZodError should return the all issues for input: { foo: 'bar', nested: {} } 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Invalid input: expected number, received undefined",
    "params": undefined,
    "path": [
      "nested",
      "bar",
    ],
  },
]
`;

exports[`extractViolationFromZodError should return the all issues for input: { foo: 100 } 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Invalid input: expected string, received number",
    "params": undefined,
    "path": [
      "foo",
    ],
  },
  {
    "code": "invalid_type",
    "message": "Invalid input: expected object, received undefined",
    "params": undefined,
    "path": [
      "nested",
    ],
  },
]
`;
